add dynamic url with jwt and add icons in btns

--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -7,5 +7,9 @@
   "SUCCESS": {
     "OK": "L'opération a été réalisée avec succès.",
     "EMAIL": "Le mail a été envoyé !"
+  },
+  "ACTIVITY": {
+    "TITLE_LINK_SHARED": "Invitation pour une sortie",
+    "DISCOVER_ACTIVITY": "Découvre notre prochaine activité ensemble!"
   }
 }
