--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -11,5 +11,12 @@
   "ACTIVITY": {
     "TITLE_LINK_SHARED": "Invitation pour une sortie",
     "DISCOVER_ACTIVITY": "Découvre notre prochaine activité ensemble!"
+  },
+  "PWA": {
+    "INSTALL": "Installer DateFinder",
+    "HOME": "Installer",
+    "IOS": "Pour installer cette application sur votre appareil IOS :",
+    "BUTTON_SHARE": "Appuyez sur le bouton de partage",
+    "AFTER_CLICKED": "puis sur 'Ajouter à l'écran d'accueil'."
   }
 }
