--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -53,8 +53,24 @@
       "SEND": "Envoyer"
     }
   },
+  "MOVIE": {
+    "NOT_FOUND": "Aucun films a été trouvé. Veuillez modifier votre recherches.",
+    "RELEASE": "Sortie :",
+    "GENRES": "Genres :",
+    "HOME_MOVIES": "Soirée Cinéma (Films à voir chez soi)",
+    "INVALID_DATE": "Pas de date renseigné",
+    "SEARCH_MOVIE": "Rechercher un film"
+  },
   "PLACE": {
-    "NOT_FOUND": "Aucun element a été trouvé. Veuillez modifier votre recherches."
+    "PROXIMITY": "à proximité",
+    "PHONE": "Numéro de téléphone :",
+    "RATING": "Note :",
+    "PRICE": "Prix :",
+    "DISTANCE": "Distance :",
+    "NOT_FOUND": "Aucun element a été trouvé. Veuillez modifier votre recherches.",
+    "NOT_DEFINED": "Non spécifié",
+    "CITY": "Ville",
+    "SEARCH": "Rechercher"
   },
   "PWA": {
     "INSTALL": "Installer DateFinder",
