create a custom page not found

--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -90,6 +90,8 @@
     "HOME": "Installer",
     "IOS": "Pour installer cette application sur votre appareil IOS :",
     "BUTTON_SHARE": "Appuyez sur le bouton de partage",
-    "AFTER_CLICKED": "puis sur 'Ajouter à l'écran d'accueil'."
+    "AFTER_CLICKED": "puis sur 'Ajouter à l'écran d'accueil'.",
+    "PAGE_NOT_FOUND": "Oups ! Cette page est introuvable.",
+    "MISSED_DATE": "On dirait que tu as raté le bon rendez-vous."
   }
 }
